# Emotion-Recognition-PyQt5

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  FINAL_PRODUCTION_REPORT.md  INSTALL.md  LESSONS_LEARNED.md  LICENSE  MODERNIZATION_SUMMARY.md  PRODUCTION_READY.md  README.md  cameraX.py  config_deap_eeg.json  deapX.py  gui.py  pyproject.toml  test_production.py  verify_production.sh
old_code/: README.md  cameraX.py  deapX.py  gui.py  language.json  main.py
src/emotion_recognition/: __init__.py  config.py  main.py
src/emotion_recognition/core/: __init__.py  camera.py  eeg_processor.py  ml_models.py
src/emotion_recognition/ui/: __init__.py  main_window.py  styles.py
src/emotion_recognition/ui/widgets/: __init__.py  eeg_plot.py
src/emotion_recognition/utils/: __init__.py  logger.py
tests/: __init__.py  conftest.py  test_config.py  test_models.py
