[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "emotion-recognition"
version = "2.0.0"
description = "Ultra-modern emotion recognition system using EEG, PPG, and facial analysis"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "AIATUS", email = "info@aiatus.com" },
]
keywords = [
    "emotion-recognition",
    "eeg",
    "ppg",
    "facial-recognition",
    "machine-learning",
    "pyqt6",
    "neuroscience",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    "PyQt6>=6.6.0",
    "PyQt6-Qt6>=6.6.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "mtcnn>=0.1.1",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "loguru>=0.7.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "qtawesome>=1.2.3",
    "pyqtgraph>=0.13.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-qt>=4.2.0",
    "pytest-mock>=3.12.0",
    "black>=23.12.0",
    "ruff>=0.1.9",
    "mypy>=1.7.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
emotion-recognition = "emotion_recognition.main:main"

[project.urls]
Homepage = "https://github.com/umitkacar/Emotion-Recognition-PyQt5"
Documentation = "https://github.com/umitkacar/Emotion-Recognition-PyQt5#readme"
Repository = "https://github.com/umitkacar/Emotion-Recognition-PyQt5"
Issues = "https://github.com/umitkacar/Emotion-Recognition-PyQt5/issues"

[tool.hatch.version]
path = "src/emotion_recognition/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["src/emotion_recognition"]

[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "pytest-cov",
    "pytest-qt",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "pytest --cov=emotion_recognition --cov-report=term-missing {args:tests}"
cov-report = [
    "pytest --cov=emotion_recognition --cov-report=html",
]

[tool.hatch.envs.lint]
detached = true
dependencies = [
    "black>=23.12.0",
    "ruff>=0.1.9",
    "mypy>=1.7.0",
]

[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/emotion_recognition tests}"
style = [
    "ruff {args:.}",
    "black --check --diff {args:.}",
]
fmt = [
    "black {args:.}",
    "ruff --fix {args:.}",
    "style",
]
all = [
    "style",
    "typing",
]

# Black configuration
[tool.black]
target-version = ["py310", "py311", "py312"]
line-length = 100
skip-string-normalization = false
exclude = '''
/(
    \.git
  | \.hatch
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# Ruff configuration
[tool.ruff]
target-version = "py310"
line-length = 100
fix = true

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "N",   # pep8-naming
    "T20", # flake8-print
    "PT",  # flake8-pytest-style
    "RET", # flake8-return
    "ERA", # eradicate
    "PL",  # pylint
    "RUF", # Ruff-specific rules
]
ignore = [
    "S101",    # Use of assert detected (needed for tests)
    "S301",    # pickle usage (needed for model persistence)
    "PLR0913", # Too many arguments to function call
    "PLR2004", # Magic value used in comparison
    "S311",    # Standard pseudo-random generators
    "PTH123",  # open() usage (complex migration)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PLR2004"]
"__init__.py" = ["F401"]
"src/emotion_recognition/ui/main_window.py" = ["N802"]  # Qt method names

[tool.ruff.lint.isort]
known-first-party = ["emotion_recognition"]

# MyPy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "mtcnn.*",
    "cv2.*",
    "sklearn.*",
    "matplotlib.*",
    "qtawesome.*",
    "pyqtgraph.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]
